<resources>
    <string name="app_name">MegaTimer</string>
    <string name="timer">Timer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_mega_timer">Add MegaTimer</string>
    <string name="title_activity_edit_mega_timer">Edit MegaTimer</string>
    <string name="add_mega_timer_title">Title</string>
    <string name="add_mega_timer_length">Length</string>
    <string name="add_mega_timer_length_button">Select Length</string>
    <string name="add_mega_timer_color">Color</string>
    <string name="add_mega_timer_color_button">Select Color</string>
    <string name="add_mega_timer_button">Add MegaTimer</string>
    <string name="edit_mega_timer_button">Edit MegaTimer</string>
    <string name="fab_menu_reset">Reset Timer</string>
    <string name="fab_menu_edit">Edit Timer</string>
    <string name="fab_menu_delete">Delete Timer</string>
    <string name="fab_menu_delete_confirmed">deleted.</string>
    <string name="service_notification_title">MegaTimer Alert</string>
    <string name="service_notification_text">has expired.</string>

</resources>
