<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/content_edit_mega_timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="de.yourdot.megatimer.EditMegaTimerActivityFragment"
        tools:showIn="@layout/activity_edit_mega_timer">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/editText_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_mega_timer_title"
                android:maxLength="30"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/textView_length"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_mega_timer_title"
            android:paddingBottom="4dp"
            android:paddingTop="16dp"
            android:text="@string/add_mega_timer_length"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="?attr/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_length_value"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:gravity="center_vertical" />

            <Button
                android:id="@+id/button_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@color/colorAccent"
                android:text="@string/add_mega_timer_length_button"
                android:textColor="?android:attr/textColorPrimaryInverse" />

        </LinearLayout>

        <TextView
            android:id="@+id/textView_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/add_mega_timer_title"
            android:paddingBottom="4dp"
            android:paddingTop="16dp"
            android:text="@string/add_mega_timer_color"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="?attr/colorAccent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageView_color"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:background="@color/black_de"
                android:contentDescription="@string/add_mega_timer_length" />

            <Button
                android:id="@+id/button_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@color/colorAccent"
                android:text="@string/add_mega_timer_color_button"
                android:textColor="?android:attr/textColorPrimaryInverse" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="bottom"
            android:orientation="vertical"
            android:layout_marginTop="20dp">

            <Button
                android:id="@+id/button_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:text="@string/edit_mega_timer_button"
                android:textColor="?android:attr/textColorPrimaryInverse" />

        </LinearLayout>


    </LinearLayout>

</ScrollView>